k8s/deployment-petclinic.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: deaddeal96/spring-petclinic-githubactions:latest 
        imagePullPolicy: IfNotPresent   
        ports:
        - containerPort: 8080

#service to access app
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
spec:
  type: NodePort
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80 # internal port
      targetPort: 8080 # app port
      nodePort: 30100 #external port
