k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-nginx-controller  # controller name
  rules:
  - host: petclinic.app   #  host name 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petclinic-service
            port:
              number: 80
